--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,96 @@
-#title {
-  color: darkolivegreen;
+body {
+  background: radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 8px 9px;
+  background-color: #282828;
+  background-size: 16px 16px;
+  font-family: "Poppins", sans-serif;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  text-align: center;
+  padding: 20px;
+  color: rgb(1, 2, 3);
+}
+
+.title p {
+  font-size: 50px;
+  font-family: "Anton", sans-serif;
+  color: white;
+  margin: 0;
+}
+
+.title img {
+  width: 100px;
+  height: 100px;
+}
+
+.search-form {
+  text-align: center;
+  width: 100%;
+  padding: 5px;
+}
+
+.character-container {
+  margin: 35px;
+  display: grid;
+  grid-template-columns: 120px 120px 120px;
+  grid-template-rows: 120px 120px 120px;
+  grid-gap: 1rem;
+}
+
+.character-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.item {
+  background-color: gray;
+  border-radius: 4px;
+  border: 6px solid #171717;
+  position: relative;
+}
+
+.item p {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  top: 67px;
+  padding-left: 14px;
+  padding-right: 15px;
+}
+
+input {
+  padding: 8px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: white;
+  margin-bottom: 6px;
+  margin-top: 6px;
+}
+
+button {
+  padding: 10px;
+  width: 130px;
+  background-color: gray;
+  border: gray;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+
+button:hover {
+  -webkit-transition-duration: 0.7s;
+  transition-duration: 0.7s;
+  background-color: white;
+  color: black;
+}
+content {
+  text-align: center;
+}
+.togg {
+  text-align: right;
+  padding-right: 3pc;
 }
